examples/c/error-codes/violates-constraint/fatal/CV-EFC1-bad-static.output
CV-EFC1-bad-static.c:5:8: error: function cannot return array type 'arr' (aka 'int [5]')
arr foo(void);
       ^
CV-EFC1-bad-static.c:13:8: error: function cannot return array type 'arr' (aka 'int [5]')
arr foo(void) {
       ^
CV-EFC1-bad-static.c:14:10: warning: incompatible pointer to integer conversion returning 'int [5]' from a function with result type 'int' [-Wint-conversion]
  return x;
         ^
1 warning and 2 errors generated.
Translation failed (kcc_config dumped). To repeat, run this command in directory fatal:
